added JS displayTemperature function, edited html ids temperature, city, description, humidity

--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,7 @@ li {
   line-height: 16px;
   padding-left: 9px;
   padding-top: 6px;
+  text-transform: capitalize;
 }
 
 .weather-temperature img {
