--- a/src/style.css
+++ b/src/style.css
@@ -24,9 +24,11 @@ li {
   line-height: 16px;
   padding-left: 9px;
   padding-top: 6px;
-  text-transform: capitalize;
+  
 }
-
+li::first-letter {
+text-transform: capitalize;
+}
 .weather-temperature img {
   display: inline-block;
   height: 60px;
