--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,15 @@ li::first-letter {
   font-size: 16px;
 }
 
+.weather-temperature .units a {
+  text-decoration: none;
+}
+
+.weather-temperature .active {
+  color: #202124;
+  cursor: default;
+}
+
 .weather-app-wrapper {
   max-width: 680px;
   margin: 0 auto;
