--- a/src/style.css
+++ b/src/style.css
@@ -73,6 +73,18 @@ li::first-letter {
 .overview {
   margin-bottom: 20px;
 }
-.forecast {
-  padding-top: 10px;
+.weather-forecast {
+  margin-top: 10px;
+  color: #000;
+  text-align: center;
+}
+.weather-forecast-day {
+  font-size: 16px;
+  opacity: 0.6;
+}
+.weather-forecast-temperatures {
+  font-size: 14px;
+}
+.weather-forecast-temperatures-min {
+  opacity: 0.6;
 }
