--- a/src/style.css
+++ b/src/style.css
@@ -3,10 +3,10 @@ body {
 }
 
 h1 {
-  color: #202124;
-  font-size: 22px;
+  color: #0d0e0f;
+  font-size: 32px;
   line-height: 26px;
-  font-weight: 400;
+  font-weight: 600;
   margin-bottom: 0;
 }
 
@@ -20,14 +20,20 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
-  color: #70757a;
-  font-size: 12px;
+  color: #202124;
+  font-size: 13px;
   line-height: 16px;
   padding-left: 0;
   padding-top: 6px;
+  opacity: 0.7;
 }
 li::first-letter {
   text-transform: capitalize;
+}
+
+.source-link a {
+  text-decoration: none;
+  color: #202124;
 }
 .weather-temperature img {
   display: inline-block;
@@ -41,7 +47,7 @@ li::first-letter {
 
 .weather-temperature strong {
   color: #202124;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 64px;
   line-height: 1;
 }
@@ -65,26 +71,49 @@ li::first-letter {
   margin: 0 auto;
   margin-top: 10px;
 }
+
 .weather-app {
   padding: 20px;
-  border: 1px solid #a0bde1;
+  border: 1px solid #6ca4f7;
   border-radius: 5px;
+  background-color: #6ca4f785;
+  box-shadow: 4px 4px 6px #6ca4f7;
 }
+
+#submit-btn {
+  background-color: #fff;
+  border-color: #fff;
+  color: #202124;
+  font-weight: 500;
+  box-shadow: 2px 2px 4px #6ca4f7;
+  transition: all 200ms ease;
+}
+
+#submit-btn:hover {
+  background-color: #6ca4f785;
+  color: #fff;
+}
+
+.weather-app ::placeholder {
+  color: #202124;
+}
+
 .overview {
   margin-bottom: 20px;
 }
 .weather-forecast {
   margin-top: 10px;
-  color: #000;
+  color: #202124;
   text-align: center;
 }
 .weather-forecast-day {
   font-size: 16px;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 .weather-forecast-temperatures {
-  font-size: 14px;
+  font-size: 15px;
 }
+
 .weather-forecast-temperatures-min {
-  opacity: 0.6;
+  opacity: 0.7;
 }
